Fix unitTests